# lang_bench

./: .gitignore  README.md
benchrunner/: Dockerfile  docker.entrypoint.sh  docker.sh  docker.start.sh  settings.gradle.kts
benchrunner/app/: build.gradle.kts
benchrunner/app/src/main/kotlin/benchrunner/: App.kt  BenchResult.kt  BenchResultAggregation.kt  BenchRunner.kt  BenchStats.kt
benchrunner/app/src/main/kotlin/process/: ProcessEventStreamer.kt  ProcessRunner.kt
benchrunner/app/src/test/kotlin/benchrunner/: AppTest.kt
c/: CMakeLists.txt  main.c
golang/: go.mod  main.go
js/: main.js  worker.js
kotlin-jvm/: settings.gradle.kts
kotlin-jvm/app/: build.gradle.kts
kotlin-jvm/app/src/main/kotlin/slacroix/: App.kt
kotlin-jvm/app/src/main/kotlin/slacroix/demo/: SimdDemo.kt
kotlin-jvm/app/src/main/kotlin/slacroix/demo/noise/: noise.kt
kotlin-jvm/app/src/test/kotlin/slacroix/: AppTest.kt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  main.rs
tmp/: Dockerfile
