[package]
name = "rust1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
rayon = "1.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#simd-json = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
byteorder = "1.4.3"
arrayvec = "0.7.2"
itoa = "1.0.4"

#sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "macros"] }